--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
